--- a/src/perspective-transformer/Makefile
+++ b/src/perspective-transformer/Makefile
@@ -4,13 +4,14 @@
 
 SRC = $(wildcard *.cc)
 OBJ = $(patsubst %cc, %o, ${SRC})
+EIGEN3_LIBS = $(shell pkg-config --cflags --libs eigen3)
 
 .PHONY: all clean
 
 all: ${OBJ}
 
 %.o: %.cc
-	${CXX} $^ -o $@ ${OPENCV_LIBS}
+	${CXX} $^ -o $@ ${EIGEN3_LIBS} ${OPENCV_LIBS}
 
 clean:
 	-@rm ${OBJ}
